--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
 /*HEADER*/
 
 h1 {
-    margin: 10px;
+    margin: 5px;
     color: white;
 }
 
@@ -10,6 +15,9 @@ h1 {
 body {
     background: url(sky-normal-web.png) no-repeat center center fixed;
     background-size: cover;
+    position: relative;
+    margin: 0;
+    min-height: 100%;
 }
 
 .body {
@@ -35,6 +43,10 @@ body {
 
 .footer {
     padding: 5px;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 .text-center {
